--- a/ch_01/4_이미지 및 멀티미디어 관련태그.htm
+++ b/ch_01/4_이미지 및 멀티미디어 관련태그.htm
@@ -22,6 +22,46 @@
         - 사진의 경로가 잘못되거나, 이미지를 제대로 표현할 수 없는 경우 대체 텍스트의 용도<br>
         - 시각장애인들을 위한 스크린 리더에서 이미지를 읽어주는 설명문구
     </p>
+
+    <h4>고정길이 (px) == 기본값 : 화면 사이즈가 조정이되어도 이미지의 크기는 변동이 없음.</h4>
+    <img src="resources/image/animal1.gif" width="200px" height="150px">
+    <img src="resources/image/ball.gif" width="200px" height="150px">
+    <img src="resources/image/cat.jpg" width="200px" height="150px">
+    <img src="resources/image/freehosting.jfif" width="200px" height="150px">
+    <img src="resources/image/nuguri1.gif" width="200px" height="150px">
+    <img src="resources/image/nuguri1.gif" width="200px" height="150px">
+
+    <br>
+    <h4>가변길이 단위 (%) : 화면 사이즈 혹은 부모 요소 사이즈에 따라 이미지의 크기도 같이 변동</h4>
+    <img src="resources/image/animal2.gif" alt="" width="23%" height="350">
+    <img src="resources/image/ball.gif" alt="" width="23%" height="350">
+    <img src="resources/image/cat.jpg" alt="" width="23%" height="350">
+    <img src="resources/image/flower.jpg" alt="" width="23%" height="350">
     
+    <br>
+
+    <h1>미디어 관련 태그</h1>
+
+    <h3>오디오 관련 태그</h3>
+    <!--
+        <audio src ="" controls autoplay loop></audio>
+
+        src : 오디오 경로
+        controls : 자동 재생 여부 지정 -> IE에서는 실행가능한 속성이었으나 현재는 지정불가
+        loop : 반복 재생여부 지정
+    -->
+    <audio src="resources/audio/major.mp3" controls autoplay loop></audio>
+
+    <hr>
+
+    <h3>비디오 관련 태그</h3>
+    <!--
+        <video src="" controls autoplay loop width="400px" height="200px" poster=""></video>
+
+        src="비디오파일이 존재하는 경로"
+        poster = "썸네일이 존해는 경로"
+    -->
+    <video src="resources/video/movie.ogv" controls autoplay loop width="400px" height="200"></video>
+    poster = "resources/image/flower.jpg"
 </body>
 </html>
