--- a/ch1_HTML/5_입력양식 테스트.htm
+++ b/ch1_HTML/5_입력양식 테스트.htm
@@ -62,6 +62,9 @@
         -
         <input type="text" size="5" max="4">
         <input type="checkbox">문자 수신 동의 <br><br>
+
+        <input type="reset">
+        <input type="submit" value="가입하기">
         </form>
     </fieldset>
     
