--- a/ch1_HTML/하이퍼링크관련.htm
+++ b/ch1_HTML/하이퍼링크관련.htm
@@ -22,7 +22,58 @@
 
         <h3>인터넷이 연결된 상황이면 현재 서비스되고 있는 웹페이지도 링크 가능</h3>
         <ul>
-            <li><a href="https://naver.com">네이버로 이동</a></li>
+            <li><a href="https://naver.com">네이버로 이동</a></li> <!-- 미작성시 => self -->
+            <li><a href="https://google.com" target="_blank">구글로 이동</a></li> <!-- target= "_blank => 새창 열어서 이동"-->
         </ul>
+
+        <hr>
+
+        <h3>이미지 클릭해서 웹페이지 링크 연결하기</h3>
+        <a href="https://w3schools.com" target="_blank">
+        <img src="resources/image/#div2" width="200">
+        </a>
+
+        <hr>
+
+        <h3 id="menu">한 페이지 내에서 점프하는 앵커 만들기</h3>
+
+        <ul>
+            <li><a href="#content1">본문내용1</a></li>
+            <li><a href="#content2">본문내용2</a></li>
+            <li><a href="#content3">본문내용3</a></li>
+        </ul>
+
+        <h4 id="content1">본문내용1</h4>
+        <div>
+            다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
+            기능을 가져올 수 있다는 펴리함은 있지만,
+            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+            다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
+            기능을 가져올 수 있다는 펴리함은 있지만,
+            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+        </div>
+
+        <h4 id="content2">본문내용2</h4>
+        <div>
+            다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
+            기능을 가져올 수 있다는 펴리함은 있지만,
+            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+            다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
+            기능을 가져올 수 있다는 펴리함은 있지만,
+            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+        </div>
+
+        <h4 id="content3">본문내용3</h4>
+        <div>
+            다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
+            기능을 가져올 수 있다는 펴리함은 있지만,
+            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+            다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
+            기능을 가져올 수 있다는 펴리함은 있지만,
+            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+        </div>
+        <a href="#menu">맨위로</a>
+
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </body>
     </html>
