--- a/ch1_HTML/하이퍼링크관련.htm
+++ b/ch1_HTML/하이퍼링크관련.htm
@@ -60,7 +60,7 @@
             자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
             다른 html 파일, 유튜브(소스코드 복붙)영상 등을 가져올 수 있다.
             기능을 가져올 수 있다는 펴리함은 있지만,
-            자바스크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
+            자바스-크립트를 적용시 이 문법을 적용하면 정상작동 안될수도 있다. 
         </div>
 
         <h4 id="content3">본문내용3</h4>
