--- a/ch2_CSS/1.CSS개요,선택자.htm
+++ b/ch2_CSS/1.CSS개요,선택자.htm
@@ -31,7 +31,7 @@
         background-color: white;
     }
 
-    /* 클래스 선ㄴ택자(.)*/
+    /* 클래스 선택자(.)*/
     .test-1{color : red;}
     .test-2{
         color : white;
