--- a/ch3_JS/ch5.문자열과숫자.htm
+++ b/ch3_JS/ch5.문자열과숫자.htm
@@ -133,7 +133,7 @@
         const plus= () => {
             let test = num1 + num2;
 
-            area3.innerHTML = `${Number(num1.value) + Number(num2.value)}`;
+            result.innerHTML = `${Number(num1.value) + Number(num2.value)}`;
         }
     </script>
     
