--- a/project/main/shopmain.html
+++ b/project/main/shopmain.html
@@ -16,7 +16,7 @@
             <li><a href="mypage.htm" class="nav-link"  >마이페이지</a></li>
             <li><a href="/project/basket/cart.htm" class="nav-link" >장바구니</a></li>
             <li><a href="/project/login/login.htm" class="nav-link" >로그인</a></li>
-            <li><a href="/project/login/singup.html" class="nav-link" >회원가입</a></li>
+            <li><a href="/project/login/singup.html" class="nav-link" >회원가입s</a></li>
         </ul>
     </nav>
 
