--- a/project/main/shopmain.html
+++ b/project/main/shopmain.html
@@ -11,14 +11,13 @@
     <!-- 네비게이터바 -->
     <nav>
         <ul>
-            <li><a href="#" class="nav-link">홈</a></li>
-            <li><a href="#" class="nav-link">상품</a></li>
-            <li><a href="mypage.htm" class="nav-link"  >마이페이지</a></li>
-            <li><a href="/project/basket/cart.htm" class="nav-link" >장바구니</a></li>
-            <li><a href="/project/login/login.htm" class="nav-link" >로그인</a></li>
-            <li><a href="/project/login/singup.html" class="nav-link" >회원가입s</a></li>
+            
+            <li class="login-box"><a href="/project/login/login.htm" class="nav-link" >로그인</a></li>
+            <li class="login-box"><a href="/project/login/singup.html" class="nav-link" >회원가입</a></li>
         </ul>
     </nav>
+
+   
 
     <!-- 풋터 -->
     <footer>
